--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,14 @@ html{
     height: 100%;
     color: white;
     text-align: center;
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after
+{
+    box-sizing: inherit;
 }
 
 img
